--- a/index.html
+++ b/index.html
@@ -98,31 +98,31 @@
 
             <li class="nav-item">
 
-              <a class="nav-link" href="/apartments.html">Apartamenty</a>
+              <a class="nav-link" href="/TatrzanskiResort/apartments.html">Apartamenty</a>
 
             </li>
 
             <li class="nav-item">
 
-              <a class="nav-link" href="/gallery.html">Galeria</a>
+              <a class="nav-link" href="/TatrzanskiResort/gallery.html">Galeria</a>
 
             </li>
 
             <li class="nav-item">
 
-              <a class="nav-link" href="/vat.html">Zwrot Vat</a>
+              <a class="nav-link" href="/TatrzanskiResort/vat.html">Zwrot Vat</a>
 
             </li>
 
             <li class="nav-item">
 
-              <a class="nav-link" href="/rent.html">Wynajem</a>
+              <a class="nav-link" href="/TatrzanskiResort/rent.html">Wynajem</a>
 
             </li>
 
             <li class="nav-item">
 
-              <a class="nav-link" href="/#contact">Kontakt</a>
+              <a class="nav-link" href="#contact">Kontakt</a>
 
             </li>
 
